# S-LDM

./: .clang_complete  CHANGELOG.md  CMakeCommonPresets.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  S-LDM.code-workspace  TODO.md  conanfile.py
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  flawfinder.yml  nowsecure-mobile-sbom.yml  ossar.yml  semgrep.yml
3dparty/qpid-proton/: config.yml
3dparty/qpid-proton/all/: conandata.yml  conanfile.py
3dparty/qpid-proton/all/test-package/: CMakeLists.txt  conanfile.yml  main.cpp
components/: CMakeLists.txt  s-ldm-components-config.cmake.in  sldmConfig.cmake  sldmDependencies.cmake
components/asn1/: CMakeLists.txt
components/cmake/: common.cmake
components/decoder-module/: CMakeLists.txt  asn1
components/decoder-module/include/: basicheader.h  btp.h  btpheader.h  commonheader.h  etsidecoderfrontend.h  gbcheader.h  geonet.h  namedenums.h  shbheader.h  utils.h
components/decoder-module/src/: basicheader.cpp  btp.cpp  btpheader.cpp  commonheader.cpp  etsidecoderfrontend.cpp  gbcheader.cpp  geonet.cpp  shbheader.cpp
components/logger/: CMakeLists.txt
components/logger/include/common/: log.h
components/logger/src/: log.cpp
components/options/: CMakeLists.txt
components/options/include/: options.h
components/options/src/: options.c  options_strings.c
components/sldm/: CMakeLists.txt
components/sldm/include/: ampqclientconfiguration.h  amqpclient.h  jsonserver.h  phpoints.h
components/sldm/src/: amqpclient.cpp  configmanager.cpp  jsonserver.cpp  main.cpp
components/vehicle-visualizer/: CMakeLists.txt
components/vehicle-visualizer/include/: vehicle-visualizer.h
components/vehicle-visualizer/src/: vehicle-visualizer.cc
config/: configuration.json
include/: amqpclient.h  areafilter.h  jsonserver.h  ldmmap.h  maneuveringservicerestclient.h  phpoints.h  quadkeyts.h  timers.h  triggermanager.h  utils.h
integration/Sample-JSON-client/: sample_JSONclient.py
integration/UDP-AMQP-relayer/Rawsock_lib/: README.md
integration/ms-van3t-namespace/: ms-van3t-namespace-creator.sh
js/: package-lock.json  package.json
options/: options_strings.h
s-ldm/: CMakeLists.txt
s-ldm/include/: amqpclient.h  jsonserver.h  ldmmap.h  maneuveringservicerestclient.h  triggermanager.h  vehicledatadef.h
s-ldm/src/: main.cpp  maneuveringservicerestclient.cpp  phpoints.cpp  quadkeyts.cpp  triggermanager.cpp
sldm/: CMakeLists.txt
sldm/include/: ampqclientconfiguration.h  amqpclient.h  areafilter.h  configmanager.h  ldmmap.h  log.h  maneuveringservicerestclient.h  triggermanager.h
sldm/src/: amqpclient.cpp  areafilter.cpp  ldmmap.cpp  main.cpp  utils.cpp
src/: amqpclient.cpp  areafilter.cpp  jsonserver.cpp  ldmmap.cpp  main.cpp  maneuveringservicerestclient.cpp  phpoints.cpp  quadkeyts.cpp  timers.cpp  triggermanager.cpp
tests/: s-ldm.sh
