cmake_minimum_required(VERSION 3.15)

project(asn1
    VERSION 1.0.0
    LANGUAGES C
    DESCRIPTION "ASN.1 C-ITS ETSI"
)

add_library(${PROJECT_NAME} OBJECT)

target_sources(${PROJECT_NAME} PRIVATE
    src/AccelerationConfidence.c
    src/AccelerationControl.c
    src/AccidentSubCauseCode.c
    src/ActionID.c
    src/AdverseWeatherCondition-AdhesionSubCauseCode.c
    src/AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.c
    src/AdverseWeatherCondition-PrecipitationSubCauseCode.c
    src/AdverseWeatherCondition-VisibilitySubCauseCode.c
    src/AlacarteContainer.c
    src/Altitude.c
    src/AltitudeConfidence.c
    src/AltitudeValue.c
    src/BIT_STRING.c
    src/BIT_STRING_oer.c
    src/BOOLEAN.c
    src/BasicContainer.c
    src/BasicVehicleContainerHighFrequency.c
    src/BasicVehicleContainerLowFrequency.c
    src/CAM.c
    src/CamParameters.c
    src/CauseCode.c
    src/CauseCodeType.c
    src/CenDsrcTollingZone.c
    src/CenDsrcTollingZoneID.c
    src/ClosedLanes.c
    src/CollisionRiskSubCauseCode.c
    src/CoopAwareness.c
    src/Curvature.c
    src/CurvatureCalculationMode.c
    src/CurvatureConfidence.c
    src/CurvatureValue.c
    src/DENM.c
    src/DangerousEndOfQueueSubCauseCode.c
    src/DangerousGoodsBasic.c
    src/DangerousGoodsContainer.c
    src/DangerousGoodsExtended.c
    src/DangerousSituationSubCauseCode.c
    src/DecentralizedEnvironmentalNotificationMessage.c
    src/DeltaAltitude.c
    src/DeltaLatitude.c
    src/DeltaLongitude.c
    src/DeltaReferencePosition.c
    src/DigitalMap.c
    src/DriveDirection.c
    src/DrivingLaneStatus.c
    src/EmbarkationStatus.c
    src/EmergencyContainer.c
    src/EmergencyPriority.c
    src/EmergencyVehicleApproachingSubCauseCode.c
    src/EnergyStorageType.c
    src/EventHistory.c
    src/EventPoint.c
    src/ExteriorLights.c
    src/GenerationDeltaTime.c
    src/HardShoulderStatus.c
    src/HazardousLocation-AnimalOnTheRoadSubCauseCode.c
    src/HazardousLocation-DangerousCurveSubCauseCode.c
    src/HazardousLocation-ObstacleOnTheRoadSubCauseCode.c
    src/HazardousLocation-SurfaceConditionSubCauseCode.c
    src/Heading.c
    src/HeadingConfidence.c
    src/HeadingValue.c
    src/HeightLonCarr.c
    src/HighFrequencyContainer.c
    src/HumanPresenceOnTheRoadSubCauseCode.c
    src/HumanProblemSubCauseCode.c
    src/IA5String.c
    src/INTEGER.c
    src/INTEGER_oer.c
    src/ImpactReductionContainer.c
    src/InformationQuality.c
    src/ItineraryPath.c
    src/ItsPduHeader.c
    src/LanePosition.c
    src/LateralAcceleration.c
    src/LateralAccelerationValue.c
    src/Latitude.c
    src/LightBarSirenInUse.c
    src/LocationContainer.c
    src/Longitude.c
    src/LongitudinalAcceleration.c
    src/LongitudinalAccelerationValue.c
    src/LowFrequencyContainer.c
    src/ManagementContainer.c
    src/NativeEnumerated.c
    src/NativeEnumerated_oer.c
    src/NativeInteger.c
    src/NativeInteger_oer.c
    src/NumberOfOccupants.c
    src/NumericString.c
    src/OCTET_STRING.c
    src/OCTET_STRING_oer.c
    src/OPEN_TYPE.c
    src/OPEN_TYPE_oer.c
    src/OpeningDaysHours.c
    src/PathDeltaTime.c
    src/PathHistory.c
    src/PathPoint.c
    src/PerformanceClass.c
    src/PhoneNumber.c
    src/PosCentMass.c
    src/PosConfidenceEllipse.c
    src/PosFrontAx.c
    src/PosLonCarr.c
    src/PosPillar.c
    src/PositionOfOccupants.c
    src/PositionOfPillars.c
    src/PositioningSolutionType.c
    src/PostCrashSubCauseCode.c
    src/ProtectedCommunicationZone.c
    src/ProtectedCommunicationZonesRSU.c
    src/ProtectedZoneID.c
    src/ProtectedZoneRadius.c
    src/ProtectedZoneType.c
    src/PtActivation.c
    src/PtActivationData.c
    src/PtActivationType.c
    src/PublicTransportContainer.c
    src/RSUContainerHighFrequency.c
    src/ReferenceDenms.c
    src/ReferencePosition.c
    src/RelevanceDistance.c
    src/RelevanceTrafficDirection.c
    src/RequestResponseIndication.c
    src/RescueAndRecoveryWorkInProgressSubCauseCode.c
    src/RescueContainer.c
    src/RestrictedTypes.c
    src/RoadType.c
    src/RoadWorksContainerBasic.c
    src/RoadWorksContainerExtended.c
    src/RoadworksSubCauseCode.c
    src/SafetyCarContainer.c
    src/SemiAxisLength.c
    src/SequenceNumber.c
    src/SignalViolationSubCauseCode.c
    src/SituationContainer.c
    src/SlowVehicleSubCauseCode.c
    src/SpecialTransportContainer.c
    src/SpecialTransportType.c
    src/SpecialVehicleContainer.c
    src/Speed.c
    src/SpeedConfidence.c
    src/SpeedLimit.c
    src/SpeedValue.c
    src/StationID.c
    src/StationType.c
    src/StationarySince.c
    src/StationaryVehicleContainer.c
    src/StationaryVehicleSubCauseCode.c
    src/SteeringWheelAngle.c
    src/SteeringWheelAngleConfidence.c
    src/SteeringWheelAngleValue.c
    src/SubCauseCodeType.c
    src/Temperature.c
    src/Termination.c
    src/TimestampIts.c
    src/Traces.c
    src/TrafficConditionSubCauseCode.c
    src/TrafficRule.c
    src/TransmissionInterval.c
    src/TurningRadius.c
    src/UTF8String.c
    src/VDS.c
    src/ValidityDuration.c
    src/VehicleBreakdownSubCauseCode.c
    src/VehicleIdentification.c
    src/VehicleLength.c
    src/VehicleLengthConfidenceIndication.c
    src/VehicleLengthValue.c
    src/VehicleMass.c
    src/VehicleRole.c
    src/VehicleWidth.c
    src/VerticalAcceleration.c
    src/VerticalAccelerationValue.c
    src/WMInumber.c
    src/WheelBaseVehicle.c
    src/WrongWayDrivingSubCauseCode.c
    src/YawRate.c
    src/YawRateConfidence.c
    src/YawRateValue.c
    src/asn_SEQUENCE_OF.c
    src/asn_SET_OF.c
    src/asn_application.c
    src/asn_bit_data.c
    src/asn_codecs_prim.c
    src/asn_internal.c
    src/asn_random_fill.c
    src/ber_decoder.c
    src/ber_tlv_length.c
    src/ber_tlv_tag.c
    src/constr_CHOICE.c
    src/constr_CHOICE_oer.c
    src/constr_SEQUENCE.c
    src/constr_SEQUENCE_OF.c
    src/constr_SEQUENCE_oer.c
    src/constr_SET_OF.c
    src/constr_SET_OF_oer.c
    src/constr_TYPE.c
    src/constraints.c
    src/der_encoder.c
    src/oer_decoder.c
    src/oer_encoder.c
    src/oer_support.c
    src/pdu_collection.c
    src/per_decoder.c
    src/per_encoder.c
    src/per_opentype.c
    src/per_support.c
    src/xer_decoder.c
    src/xer_encoder.c
    src/xer_support.c
)

target_include_directories(${PROJECT_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)

set_property(
    TARGET ${PROJECT_NAME}
    PROPERTY PUBLIC_HEADER
        include/AccelerationConfidence.h
        include/AccelerationControl.h
        include/AccidentSubCauseCode.h
        include/ActionID.h
        include/AdverseWeatherCondition-AdhesionSubCauseCode.h
        include/AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.h
        include/AdverseWeatherCondition-PrecipitationSubCauseCode.h
        include/AdverseWeatherCondition-VisibilitySubCauseCode.h
        include/AlacarteContainer.h
        include/Altitude.h
        include/AltitudeConfidence.h
        include/AltitudeValue.h
        include/BIT_STRING.h
        include/BOOLEAN.h
        include/BasicContainer.h
        include/BasicVehicleContainerHighFrequency.h
        include/BasicVehicleContainerLowFrequency.h
        include/CAM.h
        include/CamParameters.h
        include/CauseCode.h
        include/CauseCodeType.h
        include/CenDsrcTollingZone.h
        include/CenDsrcTollingZoneID.h
        include/ClosedLanes.h
        include/CollisionRiskSubCauseCode.h
        include/CoopAwareness.h
        include/Curvature.h
        include/CurvatureCalculationMode.h
        include/CurvatureConfidence.h
        include/CurvatureValue.h
        include/DENM.h
        include/DangerousEndOfQueueSubCauseCode.h
        include/DangerousGoodsBasic.h
        include/DangerousGoodsContainer.h
        include/DangerousGoodsExtended.h
        include/DangerousSituationSubCauseCode.h
        include/DecentralizedEnvironmentalNotificationMessage.h
        include/DeltaAltitude.h
        include/DeltaLatitude.h
        include/DeltaLongitude.h
        include/DeltaReferencePosition.h
        include/DigitalMap.h
        include/DriveDirection.h
        include/DrivingLaneStatus.h
        include/EmbarkationStatus.h
        include/EmergencyContainer.h
        include/EmergencyPriority.h
        include/EmergencyVehicleApproachingSubCauseCode.h
        include/EnergyStorageType.h
        include/EventHistory.h
        include/EventPoint.h
        include/ExteriorLights.h
        include/GenerationDeltaTime.h
        include/HardShoulderStatus.h
        include/HazardousLocation-AnimalOnTheRoadSubCauseCode.h
        include/HazardousLocation-DangerousCurveSubCauseCode.h
        include/HazardousLocation-ObstacleOnTheRoadSubCauseCode.h
        include/HazardousLocation-SurfaceConditionSubCauseCode.h
        include/Heading.h
        include/HeadingConfidence.h
        include/HeadingValue.h
        include/HeightLonCarr.h
        include/HighFrequencyContainer.h
        include/HumanPresenceOnTheRoadSubCauseCode.h
        include/HumanProblemSubCauseCode.h
        include/IA5String.h
        include/INTEGER.h
        include/ImpactReductionContainer.h
        include/InformationQuality.h
        include/ItineraryPath.h
        include/ItsPduHeader.h
        include/LanePosition.h
        include/LateralAcceleration.h
        include/LateralAccelerationValue.h
        include/Latitude.h
        include/LightBarSirenInUse.h
        include/LocationContainer.h
        include/Longitude.h
        include/LongitudinalAcceleration.h
        include/LongitudinalAccelerationValue.h
        include/LowFrequencyContainer.h
        include/ManagementContainer.h
        include/NativeEnumerated.h
        include/NativeInteger.h
        include/NumberOfOccupants.h
        include/NumericString.h
        include/OCTET_STRING.h
        include/OPEN_TYPE.h
        include/OpeningDaysHours.h
        include/PathDeltaTime.h
        include/PathHistory.h
        include/PathPoint.h
        include/PerformanceClass.h
        include/PhoneNumber.h
        include/PosCentMass.h
        include/PosConfidenceEllipse.h
        include/PosFrontAx.h
        include/PosLonCarr.h
        include/PosPillar.h
        include/PositionOfOccupants.h
        include/PositionOfPillars.h
        include/PositioningSolutionType.h
        include/PostCrashSubCauseCode.h
        include/ProtectedCommunicationZone.h
        include/ProtectedCommunicationZonesRSU.h
        include/ProtectedZoneID.h
        include/ProtectedZoneRadius.h
        include/ProtectedZoneType.h
        include/PtActivation.h
        include/PtActivationData.h
        include/PtActivationType.h
        include/PublicTransportContainer.h
        include/RSUContainerHighFrequency.h
        include/ReferenceDenms.h
        include/ReferencePosition.h
        include/RelevanceDistance.h
        include/RelevanceTrafficDirection.h
        include/RequestResponseIndication.h
        include/RescueAndRecoveryWorkInProgressSubCauseCode.h
        include/RescueContainer.h
        include/RestrictedTypes.h
        include/RoadType.h
        include/RoadWorksContainerBasic.h
        include/RoadWorksContainerExtended.h
        include/RoadworksSubCauseCode.h
        include/SafetyCarContainer.h
        include/SemiAxisLength.h
        include/SequenceNumber.h
        include/SignalViolationSubCauseCode.h
        include/SituationContainer.h
        include/SlowVehicleSubCauseCode.h
        include/SpecialTransportContainer.h
        include/SpecialTransportType.h
        include/SpecialVehicleContainer.h
        include/Speed.h
        include/SpeedConfidence.h
        include/SpeedLimit.h
        include/SpeedValue.h
        include/StationID.h
        include/StationType.h
        include/StationarySince.h
        include/StationaryVehicleContainer.h
        include/StationaryVehicleSubCauseCode.h
        include/SteeringWheelAngle.h
        include/SteeringWheelAngleConfidence.h
        include/SteeringWheelAngleValue.h
        include/SubCauseCodeType.h
        include/Temperature.h
        include/Termination.h
        include/TimestampIts.h
        include/Traces.h
        include/TrafficConditionSubCauseCode.h
        include/TrafficRule.h
        include/TransmissionInterval.h
        include/TurningRadius.h
        include/UTF8String.h
        include/VDS.h
        include/ValidityDuration.h
        include/VehicleBreakdownSubCauseCode.h
        include/VehicleIdentification.h
        include/VehicleLength.h
        include/VehicleLengthConfidenceIndication.h
        include/VehicleLengthValue.h
        include/VehicleMass.h
        include/VehicleRole.h
        include/VehicleWidth.h
        include/VerticalAcceleration.h
        include/VerticalAccelerationValue.h
        include/WMInumber.h
        include/WheelBaseVehicle.h
        include/WrongWayDrivingSubCauseCode.h
        include/YawRate.h
        include/YawRateConfidence.h
        include/YawRateValue.h
        include/asn_SEQUENCE_OF.h
        include/asn_SET_OF.h
        include/asn_application.h
        include/asn_bit_data.h
        include/asn_codecs.h
        include/asn_codecs_prim.h
        include/asn_internal.h
        include/asn_ioc.h
        include/asn_random_fill.h
        include/asn_system.h
        include/ber_decoder.h
        include/ber_tlv_length.h
        include/ber_tlv_tag.h
        include/constr_CHOICE.h
        include/constr_SEQUENCE.h
        include/constr_SEQUENCE_OF.h
        include/constr_SET_OF.h
        include/constr_TYPE.h
        include/constraints.h
        include/der_encoder.h
        include/oer_decoder.h
        include/oer_encoder.h
        include/oer_support.h
        include/per_decoder.h
        include/per_encoder.h
        include/per_opentype.h
        include/per_support.h
        include/xer_decoder.h
        include/xer_encoder.h
        include/xer_support.h
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT components-config
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(
    DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/include/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/components/${PROJECT_NAME}
)

add_library(s-ldm::${PROJECT_NAME} ALIAS ${PROJECT_NAME})